# recast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  dev_main.py  justfile  pyproject.toml
src/ingest/: base_client.py  cen_api_collector.py  cen_api_ingest.py  cen_collector.py  pyproject.toml
src/ingest/shared/: base_client.py  config.py  pyproject.toml  secrets.py  storage.py
src/ingest/src/ingest/cen/: __main__.py  collector.py
src/ingest/src/ingest/era5/: __main__.py  collector.py
src/ingest/src/ingest/openmeteo/: __main__.py  collector.py
src/shared/: pyproject.toml
src/shared/src/shared/: base_client.py  config.py  secrets.py  storage.py
src/transform/: dbt_project.yml  profiles.yml  pyproject.toml
src/transform/macros/: clasificar_fuente.sql  generate_schema_name.sql  utm_to_latlon.sql
src/transform/models/marts/: _mart_models.yml  fct_generacion_hora.sql  fct_generacion_hora.yml  mart_eficiencia_central.sql  mart_eficiencia_central.yml  mart_generacion_diaria.sql  mart_generacion_diaria.yml  mart_generacion_por_central.sql  mart_generacion_por_central.yml  mart_resumen_sistema.sql  mart_resumen_sistema.yml  mart_training_solar.sql  mart_training_solar.yml  time_spine_daily.sql  time_spine_daily.yml
src/transform/models/staging/: _sources.yml  schema.yml  stg_centrales_info.sql  stg_centrales_info.yml  stg_generacion_real.sql  stg_generacion_real.yml  stg_solar_passed.sql  stg_solar_passed.yml
src/transform/tests/: assert_valid_lat_lon.sql
terraform/: bigquery.tf  main.tf  storage.tf
terraform/schemas/: centrales_info.json  era5_solar.json  era5_wind.json  generacion_real.json
test_dir/: Dockerfile
