[project]
name = "ingest"
version = "0.1.0"
description = "Data collectors for energy project ingestion pipeline"
requires-python = ">=3.13"
dependencies = [
  "shared",
  "polars>=1.38.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]
