[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for energy project collectors"
requires-python = ">=3.13"
dependencies = [
  "requests>=2.32.5",
  "google-cloud-storage>=3.9.0",
  "google-cloud-secret-manager>=2.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
